implemented endpoint to retrieve poem ids
